--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <groupId>com.songcw</groupId>
-        <artifactId>yes-common</artifactId>
+        <artifactId>scw-yes-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -21,6 +21,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
     </dependencies>
 
