--- a/src/main/resources/bootstrap-dev.properties
+++ b/src/main/resources/bootstrap-dev.properties
@@ -8,5 +8,7 @@ eureka.client.service-url.defaultZone=http://127.0.0.1:28099/eureka/
 eureka.instance.hostname=${spring.cloud.client.ip-address}
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
 #
-spring.cloud.config.server.git.uri=uri=https://github.com/sunday-silence/songcw-yes-config-file.git
+spring.cloud.config.server.git.uri=https://github.com/sunday-silence/songcw-yes-config-file.git
 spring.cloud.config.server.git.search-paths=config
+#
+spring.rabbitmq.host=118.25.216.52
